css/style.css
/* ... */
:root {
  --primary-color: #585858;
  --linkedin-color: #0077b5;
  --primariy-linear-gradient: linear-gradient(
    90deg,
    rgba(223, 232, 232, 0.8671497584541062) 14%,
    rgba(178, 193, 212, 0.952054794520548) 89%
  );
  scroll-behavior: smooth;
}

@media (max-width: 1058px) {
  .main-nav .contact-links {
    display: none;
    /* visibility: hidden; */
  }
}

@media (max-width: 450px) {
  header .top-nav {
    display: none;
  }
}

@media (max-width: 900px) {
  .about {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center; 
  }
}

@media (max-width: 768px) {

  .landing {
    flex-direction: column;
  }

  .landing .main-nav img {
    width: 100%;
    padding: 0 30%;
    margin-bottom: 3%;
  }

  .landing .main-nav .nav-link {
    display: none;
  }

  .landing .hero {
    width: 100%;
  }

    /* Adjusting the about section items */
    .about {
        flex-direction: column;
        align-items: center;
        justify-content: center;
        text-align: center; 
        padding: 10px;
        margin: 0 auto; 
        gap: 0px;
    }

    /* Adjusting the size and centering of the SVG container */
    .svg-container {
        width: 100%; /* Take full width for centering purposes */
        max-width: 400px; /* Set a maximum width to prevent oversizing */
        height: auto; /* Maintain aspect ratio */
        margin: 10px auto; /* Center the container horizontally */
        margin-bottom: 0;
        display: flex; /* Use flex for centering contents */
        justify-content: center; /* Center contents horizontally */
        align-items: center; /* Center contents vertically */
    }

    /* Adjusting the SVG size */
    .svg-container svg {
        width: 100%; /* Full width of the container */
        max-width: 100%; /* Ensure it doesn't exceed container size */
        height: auto; /* Maintain aspect ratio */
        display: block; /* Block display to prevent inline margin issues */
        margin: 0 auto; /* Center the SVG within the container */
    }

    /* Adjusting the LinkedIn icon size within the SVG */
    .linkedin-icon i {
        font-size: 40px; /* Adjust icon size */
    }

    .introduction {
        width: 90%; 
        max-width: 600px; 
        margin: 10px auto;
        margin-top: 0;
    }

    .introduction-para {
        font-size: 1rem; 
        line-height: 1.6; 
        padding-top: 10px; 
        padding-left: 10px; 
        padding-right: 10px; 
    }


    /* Adjusting the Work Experience Section */

    .experience {
      h1 {
        font-size: 1rem;
        text-align: center;
        font-weight: 300;
      }

      .experience-card {
        flex-direction: column;
      }

      .company-logo img {
        padding: 0 20% 10% 20%;
      }

      .company-experience {
        margin: 0;
        text-align: center;

        .company-tenure, .company-location {
          font-size: 0.8rem;
        }

        .company-name {
          font-weight: 700;
        }

        .position-name {
          font-size: 1rem;
        }

        .company-division {
          font-size: 0.9rem;
        }
      }
    }

    .skills {
      h1 {
        font-size: 1rem;
        text-align: center;
      }
    }

    .education {
      .education-header {
        font-size: 2rem;
        text-align: center;
        margin: 0;
      }
    }
}

body {
  font-family: "Poppins", sans-serif;
}

header {
  width: 100%;
  position: fixed; /* Keep the header at the top of the viewport */
  top: 0;
  left: 0;
  z-index: 1000;
  opacity: 0; /* Initially hidden */
  visibility: hidden; /* Initially hidden */
  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
}

.top-nav {
  padding: 25px 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  background: var(--primariy-linear-gradient);

  a {
    text-decoration: none;
    color: #000;
  }
}

.top-nav.visible {
  opacity: 1; /* Show the header */
  visibility: visible; /* Make it visible */
}

.top-nav-logo {
  font-family: "Work Sans", sans-serif;
  font-size: 2rem;
  font-weight: 200;
  margin-left: 40px;
}

.nav-links {
  display: flex;
  justify-content: center;
  flex-grow: 1;
}

.top-nav-link {
  text-decoration: none;
  color: var(--primary-color);
  padding: 0 15px;
}

/* SIDE NAV CSS */

.contact-links a {
  text-decoration: none;
  color: var(--primary-color);
  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
  font-size: xx-large;
  padding-top: 7px;
}

/* .contact-links a:hover {
    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.9);
} */

a .fa-envelope:hover {
  transform: translateY(-5px); /* Moves the icon up slightly */
  color: rgb(141, 35, 35);
}

a .fa-code:hover {
  transform: translateY(-5px); /* Moves the icon up slightly */
  color: yellow;
  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.9);
}

a .fa-github:hover {
  transform: translateY(-5px); /* Moves the icon up slightly */
  color: #000;
  size: 20rem;
}

a .fa-linkedin:hover {
  transform: translateY(-5px); /* Moves the icon up slightly */
  color: var(--linkedin-color);
  size: 20rem;
}

.landing {
  max-width: 100vw;
  /* height: 93vh; */
  /* max-height: 700px; */
  /* border: 1px solid black; */
  padding: 5%;
  padding-bottom: 8%;
  gap: 3.5%;
  /* border-radius: 10px; */
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
}

.main-nav {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  gap: 5%;

  img {
    width: 100%;
  }
}

.contact-links {
  margin-top: 45px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-self: center;
}

.nav-logo {
  margin-bottom: 10%;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.9);

  /* img { */

  padding: 1rem;
  /* } */

  &:hover {
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.9);
  }
}
/* ... */

